re PR fortran/33412 (Bind(C): ELEMENTAL procedure conflicts with BIND(C))

2007-09-13  Tobias Burnus  <burnus@net-b.de>

	PR fortran/33412
	* symbol.c (check_conflict): Add conflict of ELEMENTAL with Bind(C).

2007-09-13  Tobias Burnus  <burnus@net-b.de>

	PR fortran/33412
	* gfortran.dg/elemental_bind_c.f90: New.

From-SVN: r128471